API/test fixes: expose legacy workflow methods in IPSWorkflowService; adapt PSSiteManagerTest to removed PSSite helpers